# luciola

./: .env.example  .gitignore  ACTION_PLAN.md  CONTRIBUTING.md  DEEP_DIVE_REPORT.md  FALLBEHIND_FIX_DELTA_2026-02-17.md  LICENSE  OPERATIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
app/: db.py  main.py  settings.py
app/api/: routes.py
app/models/: __init__.py  entities.py
app/services/: anime_db.py  hash_manifest.py  jellyfin.py  job_runner.py  matcher.py  notifier.py  organizer.py  pipeline.py  qbit_client.py  qbit_maintenance.py  reconciler.py  rss_sources.py  scheduler.py
docs/: ARCHITECTURE.md  CODEX_AUTOPILOT.md  PIPELINE_RUNBOOK.md
scripts/: codex-autopilot.sh  configure_qbit.py  generate_local_posters.sh  healthcheck.sh  metadata_sync_report.py  setup_nas_jellyfin.sh  verify_hash_range.py
tests/: test_anime_db_sync.py  test_hash_manifest.py  test_jellyfin_status.py  test_poll_guards_and_parsing.py  test_reconciler_classification.py  test_show_status.py
