[project]
name = "bangumi-automation"
version = "0.1.0"
description = "Bangumi automation service (tracking, torrenting, organizing, notifications)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "apscheduler>=3.10.4",
  "qbittorrent-api>=2025.2.0",
  "feedparser>=6.0.11",
  "guessit>=3.8.0",
  "python-telegram-bot>=21.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
